# djangocourse

./: .gitignore  Dockerfile  docker-compose.yml  mailgun_test.py  pyproject.toml  start-django.sh  tailwind.config.js
app/: admin.py  managers.py  models.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_auto_20241122_1040.py  0003_article_creator_alter_article_word_count.py  0004_alter_article_content_alter_article_created_at_and_more.py  0005_alter_article_options.py  0006_alter_userprofile_managers_alter_userprofile_email.py
djangocourse/: settings.py  urls.py
locale/id/LC_MESSAGES/: django.mo  django.po
static/: input.css  output.css
templates/: base.html
templates/account/: login.html  signup.html
templates/allauth/elements/: button.html
templates/allauth/layouts/: base.html
templates/app/: create_article.html  delete_article.html  home.html  update_article.html
templates/app/layouts/: base_form.html
